try to fix mobile white space

--- a/client/src/css/nav-bar.css
+++ b/client/src/css/nav-bar.css
@@ -110,6 +110,14 @@ nav{
 }
 
 @media screen and (max-width: 980px) {
+    html,body, #root {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    }
+
     .navbar-nav{
         height: 175px;
     }
